# GeoANLA-ETL

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: municipios_codigos.csv
rust_tunnel/: Cargo.toml
rust_tunnel/src/: main.rs
src/geoanla/catalog/: __init__.py  corineland.py  domains.py  municipios.py
src/geoanla/core/: __init__.py  base.py
src/geoanla/models/: TABLES.py  T_11_GEOLOGIA.py  T_12_GEOMORFOLOGIA.py  T_13_PAISAJE.py  T_14_SUELOS.py  T_15_HIDROLOGIA.py  T_16_HIDROGEOLOGIA.py  T_17_GEOTECNIA.py  T_18_ATMOSFERA.py  T_19_CLIMA.py  T_20_BIOTICO_CONTI_COSTE.py  T_21_MARINO.py  T_22_POLITICO_ADMINISTRATIVO.py  T_23_ECONOMICO.py  T_24_SOCIOCULTURAL.py  T_25_ARQUEOLOGIA.py  T_26_GESTION_RIESGO.py  T_27_ANALISIS_RIESGO.py  T_29_ZONIFICACION.py  T_31_AREAS_CONSER_PROTEC_AMBIENTAL.py  T_32_AREAS_REGLAMENTACION_ESPECIAL.py  T_33_PROYECTO.py  T_34_COMPENSACION.py  T_35_INVERSION_1_POR_CIENTO.py  T_36_CONTINGENCIAS.py  __init__.py
src/geoanla/utils/: __init__.py  geo.py  search.py  validators.py
